# third-eye-client

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  OPERATIONS.md  README.md  build.rs
.cargo/: audit.toml  deny.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
installer/: windows.nsi
macos/: Info.plist
scripts/: build_linux.sh  build_macos_app.sh  build_windows.sh  fix_media_layout.py  package_release.sh
specs/001-cross-platform-refactor-foundation/: spec.md
specs/002-egui-to-slint-migration/: spec.md
src/: camera.rs  formatting.rs  lib.rs  main.rs  map.rs  network.rs  nmea.rs  rov_status.rs
src/storage/: auth.rs  config.rs  db.rs  media.rs  mod.rs  outbox.rs
src/storage/migrations/: 001_initial.sql
tests/: auth.rs  recalibrate.rs  storage.rs  udp_status.rs
ui/: app.slint
