[package]
name = "third-eye-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.33.0"
egui = "0.33.0"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.145"
webbrowser = "1.0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-location = { version = "0.2.2", default-features = false, features = ["std", "CLLocation", "CLLocationManager"] }
objc2 = "0.5.2"
