[package]
name = "third-eye-client"
version = "0.1.0"
edition = "2024"

[features]
default = []
test-tools = []

[[bin]]
name = "test_udp_server"
path = "src/bin/test_udp_server.rs"
required-features = ["test-tools"]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
cookie = "0.18"
directories = "5"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
slint = { version = "1.13.1", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"] }
uuid = { version = "1", features = ["v4", "serde"] }
webbrowser = "1.0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-location = { version = "0.2.2", default-features = false, features = ["std", "CLLocation", "CLLocationManager"] }
objc2 = "0.5.2"

[dev-dependencies]
mockito = "1"
tempfile = "3"
